SERVER-55500 collMod should not assume that the time-series buckets namespace implies a collection is clustered